--- a/index.html
+++ b/index.html
@@ -10,36 +10,35 @@
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
-  <div class="container">
-  <div class=top>
-  <section id="topBar">
-    <img src="Images/Logo.png" id="logo" alt="TriadhLogo">
-    <h5 id="Triad">Triad Assistant</h5>
-    <h5 id="close">x</h5>
-  </section>
-    <section id="status">
+  <section class="container">
+    <div class=top>
+      <div id="topBar">
+        <img src="Images/Logo.png" id="logo" alt="TriadhLogo">
+        <h5 id="Triad">Triad Assistant</h5>
+        <h5 id="close">x</h5>
+      </div>
+    <div id="status">
       <p id="online">Online</p>
       <p id="offline">Offline</p>
-    </section>
     </div>
-  <div class="convo">
-  <section id="greeting">Hi, Thanks for reaching out. How may I help you today?</section>
-  <section id="greeting">Here are some options to start: <a href="">option1</a>, <a href="">option2</a>, <a href="">option3</a>, <a href="">others</a></section>
-  <section id="user">Who is Elizabeth II?</section>
-  <section id="agent">She is the queen of England</section>
-  <section id="user">Who is David Beckham?</section>
-  <section id="agent">He is a famous British soccer player</section>
-  <section id="user">When is your birthday?</section>
-  <section id="agent">I was created on 12/31/2022</section>
-  <section id="user">What's your name?</section>
-  <section id="agent">I am The Assistant</section>
   </div>
-
-  <section class="field">
+  <div class="convo">
+      <div id="greeting">Hi, Thanks for reaching out. How may I help you today?</div>
+      <div id="greeting">Here are some options to start: <a href="">option1</a>, <a href="">option2</a>, <a href="">option3</a>, <a href="">others</a></div>
+      <div id="user">Who is Elizabeth II?</div>
+      <div id="agent">She is the queen of England</div>
+      <div id="user">Who is David Beckham?</div>
+      <div id="agent">He is a famous British soccer player</div>
+      <div id="user">When is your birthday?</div>
+      <div id="agent">I was created on 12/31/2022</div>
+      <div id="user">What's your name?</div>
+      <div id="agent">I am The Assistant</div>
+    </div>
+  <div class="field">
     <input type="text" value="Send message" id="message"/>
     <input type="submit" value="Submit" id="submit"/>
-    </section>
-
   </div>
-    </body>
+
+  </section>
   </body>
+  </html>
